objects/hed__Contact_Language__c.object
<CustomObject>
    <description>Joins a Language and a Contact to store details about a Contact&apos;s language fluency.</description>
    <label>Contact Language</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Contact Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <description>The person who speaks this language.</description>
        <inlineHelpText>The person who speaks this language.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Languages</relationshipLabel>
        <relationshipName>Contact_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Fluency__c</fullName>
        <description>The fluency with which this person speaks this language.</description>
        <inlineHelpText>The fluency with which this person speaks this language.</inlineHelpText>
        <label>Fluency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Language__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A language this person speaks.</description>
        <inlineHelpText>A language this person speaks.</inlineHelpText>
        <label>Language</label>
        <referenceTo>hed__Language__c</referenceTo>
        <relationshipLabel>Contact Languages</relationshipLabel>
        <relationshipName>Contact_Languages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Language_Details__c</fullName>
        <description>Additional details about this Contact&apos;s preferred language.</description>
        <label>Language Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is the language of choice for this person.</description>
        <inlineHelpText>Indicates this is the language of choice for this person.</inlineHelpText>
        <label>Primary Language</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>